# linkedin-agent-elveflow

./: .env.example  .gitignore  README.md  linkedin_agent.py  pyproject.toml
data/: reference_posts.txt
